Link to full page slides.

--- a/docs/_slides/p2.md
+++ b/docs/_slides/p2.md
@@ -1,61 +1,4 @@
-```mermaid
-flowchart LR;
-    Citizen -->App;
-```
-
 ---
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-```
-
+slide-contents: /_slidescontent/p2.md
+title: Testing Slides
 ---
-
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-```
-
----
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-```
-
----
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-    Pro -->WebApp;
-```
-
----
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-    Pro -->WebApp;
-    Pro  -->CIS2;
-```
