Almost rerenderring mermaid on slide change.
Signed-off-by: Ross Buggins <78215796+RossBugginsNHS@users.noreply.github.com>

--- a/docs/_slidescontent/p2.md
+++ b/docs/_slidescontent/p2.md
@@ -1,61 +1,106 @@
-```mermaid
+<div class="mermaid r-stretch">
 flowchart LR;
-    Citizen -->App;
-```
+SomeExternalProof-->ProxyService;
+</div>
 
 ---
 
-```mermaid
+<div class="mermaid r-stretch">
 flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-```
+SomeExternalProof-->ProxyService;
+ProxyService-->RBAC;
+</div>
 
 ---
 
-
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-```
+Next
 
 ---
 
-```mermaid
+<div class="mermaid r-stretch">
 flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-```
+Citizen -->App;
+Citizen -->NHSLogin;
+Citizen -->IdentityServer;
+IdentityServer -->NHSLogin;
+IdentityServer -->CIS2;
+App -->Api;
+Pro -->WebApp;
+Pro  -->CIS2;
+</div>
 
 ---
 
-```mermaid
-flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-    Pro -->WebApp;
-```
+Next
 
 ---
 
-```mermaid
+<div class="mermaid r-stretch">
 flowchart LR;
-    Citizen -->App;
-    Citizen -->NHSLogin;
-    Citizen -->IdentityServer;
-    IdentityServer -->NHSLogin;
-    IdentityServer -->CIS2;
-    App -->Api;
-    Pro -->WebApp;
-    Pro  -->CIS2;
-```
+Citizen -->App;
+Citizen -->NHSLogin;
+</div>
+
+---
+
+Next
+
+---
+
+<div class="mermaid r-stretch">
+flowchart LR;
+Citizen -->App;
+Citizen -->NHSLogin;
+Citizen -->IdentityServer;
+</div>
+
+---
+
+Next
+
+---
+
+<div class="mermaid r-stretch">
+flowchart LR;
+Citizen -->App;
+Citizen -->NHSLogin;
+Citizen -->IdentityServer;
+IdentityServer -->NHSLogin;
+IdentityServer -->CIS2;
+App -->Api;
+</div>
+
+---
+
+Next
+
+---
+
+<div class="mermaid r-stretch">
+flowchart LR;
+Citizen -->App;
+Citizen -->NHSLogin;
+Citizen -->IdentityServer;
+IdentityServer -->NHSLogin;
+IdentityServer -->CIS2;
+App -->Api;
+Pro -->WebApp;
+</div>
+
+---
+
+Next
+
+---
+
+<div class="mermaid r-stretch">
+flowchart LR;
+Citizen -->App;
+Citizen -->NHSLogin;
+Citizen -->IdentityServer;
+IdentityServer -->NHSLogin;
+IdentityServer -->CIS2;
+App -->Api;
+Pro -->WebApp;
+Pro  -->CIS2;
+</div>
